--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,7 +36,7 @@ linters-settings:
   gofmt:
     simplify: true
   goimports:
-    local-prefixes: github.com/floroz/auction-system
+    local-prefixes: github.com/floroz/gavel
   gocyclo:
     min-complexity: 15
   revive:
