feat: ship binary with dockerfile

--- a/services/user-stats-service/Dockerfile
+++ b/services/user-stats-service/Dockerfile
@@ -13,6 +13,7 @@ COPY pkg/ pkg/
 COPY services/user-stats-service/ services/user-stats-service/
 
 # Build binaries
+RUN go build -o /bin/stats-service ./services/user-stats-service/cmd/api/main.go
 RUN go build -o /bin/stats-worker ./services/user-stats-service/cmd/worker/main.go
 
 # Final Stage
@@ -20,8 +21,9 @@ FROM alpine:3.21
 WORKDIR /app
 
 # Copy binaries
+COPY --from=builder /bin/stats-service /app/stats-service
 COPY --from=builder /bin/stats-worker /app/stats-worker
 
 # Default command
-CMD ["/app/stats-worker"]
+CMD ["/app/stats-service"]
 
