chore: bundle migrations in dockerfiles

--- a/services/bid-service/Dockerfile
+++ b/services/bid-service/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 # Install git for potential dependencies
 RUN apk add --no-cache git
 
+# Install goose for migrations
+RUN go install github.com/pressly/goose/v3/cmd/goose@latest
+
 # Cache dependencies
 COPY go.mod go.sum ./
 RUN go mod download
@@ -23,7 +26,10 @@ WORKDIR /app
 # Copy binaries
 COPY --from=builder /bin/bid-service /app/bid-service
 COPY --from=builder /bin/bid-worker /app/bid-worker
+COPY --from=builder /go/bin/goose /app/goose
+
+# Copy migrations
+COPY services/bid-service/migrations /app/migrations
 
 # Default command (can be overridden)
 CMD ["/app/bid-service"]
-
