--- a/services/user-stats-service/Dockerfile
+++ b/services/user-stats-service/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 # Install git for potential dependencies
 RUN apk add --no-cache git
 
+# Install goose for migrations
+RUN go install github.com/pressly/goose/v3/cmd/goose@latest
+
 # Cache dependencies
 COPY go.mod go.sum ./
 RUN go mod download
@@ -23,7 +26,10 @@ WORKDIR /app
 # Copy binaries
 COPY --from=builder /bin/stats-service /app/stats-service
 COPY --from=builder /bin/stats-worker /app/stats-worker
+COPY --from=builder /go/bin/goose /app/goose
+
+# Copy migrations
+COPY services/user-stats-service/migrations /app/migrations
 
 # Default command
 CMD ["/app/stats-service"]
-
