fix: path matching strategy in ingress

--- a/deploy/charts/bid-service/templates/ingress.yaml
+++ b/deploy/charts/bid-service/templates/ingress.yaml
@@ -3,14 +3,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   ingressClassName: {{ .Values.ingress.className }}
   rules:
   - host: {{ .Values.ingress.host }}
     http:
       paths:
-      - path: /bids.v1.
-        pathType: Prefix
+      - path: /bids\.v1\..*
+        pathType: ImplementationSpecific
         backend:
           service:
             name: {{ .Release.Name }}
