feat: enable cors for dev/local

--- a/deploy/charts/auth-service/templates/ingress.yaml
+++ b/deploy/charts/auth-service/templates/ingress.yaml
@@ -5,6 +5,10 @@ metadata:
   name: {{ .Release.Name }}-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.ingress.cors.allowOrigin | quote }}
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Connect-Protocol-Version"
 spec:
   ingressClassName: {{ .Values.ingress.className }}
   rules:
