--- a/deploy/charts/bid-service/values.yaml
+++ b/deploy/charts/bid-service/values.yaml
@@ -7,6 +7,8 @@ ingress:
   enabled: true
   className: nginx
   host: api.gavel.local
+  cors:
+    allowOrigin: "http://app.gavel.local"
 
 config:
   bidDbUrl: "postgres://user:password@postgres-bids-postgresql:5432/bid_db?sslmode=disable"
