--- a/deploy/charts/user-stats-service/values.yaml
+++ b/deploy/charts/user-stats-service/values.yaml
@@ -7,6 +7,8 @@ ingress:
   enabled: true
   className: nginx
   host: api.gavel.local
+  cors:
+    allowOrigin: "http://app.gavel.local"
 
 config:
   userStatsDbUrl: "postgres://user:password@postgres-stats-postgresql:5432/stats_db?sslmode=disable"
