chore: add knip

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,22 @@
     "pnpm": ">=10.26.0"
   },
   "scripts": {
-    "proto:gen": "./scripts/generate-proto.sh",
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run",
-    "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix",
-    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "start": "node .output/server/index.mjs"
+    "build": "vite build",
+    "dev": "vite dev --port 3000",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "knip": "knip",
+    "lint:code:fix": "eslint --fix",
+    "lint:code": "eslint",
+    "lint:fix": "pnpm format:fix && pnpm lint:code:fix",
+    "lint": "pnpm knip && pnpm format:check && pnpm lint:code &&  pnpm typecheck",
+    "preview": "vite preview",
+    "proto:gen": "./scripts/generate-proto.sh",
+    "start": "node .output/server/index.mjs",
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@connectrpc/connect": "^2.1.1",
@@ -71,6 +76,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^27.0.0",
+    "knip": "^5.79.0",
     "nitro": "3.0.1-alpha.1",
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
