--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "zod": "^4.3.4"
   },
   "devDependencies": {
+    "@bufbuild/protoc-gen-es": "^2.10.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -46,6 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "knip": "^5.79.0",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
