chore: add vitest and env

--- a/env.example
+++ b/env.example
@@ -1,5 +1,16 @@
-# Database Configuration
+# ========================================
+# Backend Services Configuration
+# ========================================
+
+# Auth Service Configuration
+AUTH_DB_URL=postgres://user:password@localhost:5431/auth_db
+AUTH_PRIVATE_KEY_PATH=.data/keys/private.pem
+AUTH_PUBLIC_KEY_PATH=.data/keys/public.pem
+
+# Bid Service Configuration
 BID_DB_URL=postgres://user:password@localhost:5432/bid_db
+
+# User Stats Service Configuration
 USER_STATS_DB_URL=postgres://user:password@localhost:5433/stats_db
 
 # RabbitMQ Configuration
@@ -8,5 +19,28 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 # Redis Configuration
 REDIS_URL=localhost:6379
 
-# Frontend Configuration
-VITE_API_URL=http://api.gavel.local
+# ========================================
+# Frontend/BFF Configuration
+# ========================================
+
+# Environment (development, production, test)
+NODE_ENV=development
+
+# Service URLs for Backend Communication
+# 
+# Local Development (default if not set):
+#   AUTH_SERVICE_URL=http://localhost:8080
+#   BID_SERVICE_URL=http://localhost:8081
+#   USER_STATS_SERVICE_URL=http://localhost:8082
+#
+# Kubernetes/Production (set these in Helm values):
+#   AUTH_SERVICE_URL=http://auth-service
+#   BID_SERVICE_URL=http://bid-service
+#   USER_STATS_SERVICE_URL=http://user-stats-service
+#
+# You only need to set these if your services run on non-default ports
+# or you're overriding the defaults in lib/env.ts
+
+# AUTH_SERVICE_URL=http://localhost:8080
+# BID_SERVICE_URL=http://localhost:8081
+# USER_STATS_SERVICE_URL=http://localhost:8082
