--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "lint:code": "eslint",
     "lint:fix": "pnpm format:fix && pnpm lint:code:fix",
     "lint": "pnpm knip && pnpm format:check && pnpm lint:code && pnpm typecheck",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "proto:gen": "./scripts/generate-proto.sh",
     "typecheck": "tsc --noEmit"
   },
@@ -26,6 +28,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
@@ -50,6 +53,7 @@
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.16"
   }
 }
