--- a/env.example
+++ b/env.example
@@ -26,6 +26,9 @@ REDIS_URL=localhost:6379
 # Environment (development, production, test)
 NODE_ENV=development
 
+# JWT Public Key Path (for token verification in BFF)
+# JWT_PUBLIC_KEY_PATH=./.data/public.pem
+
 # Service URLs for Backend Communication
 # 
 # Local Development (default if not set):
