--- a/env.example
+++ b/env.example
@@ -4,8 +4,8 @@
 
 # Auth Service Configuration
 AUTH_DB_URL=postgres://user:password@localhost:5431/auth_db
-AUTH_PRIVATE_KEY_PATH=.data/keys/private.pem
-AUTH_PUBLIC_KEY_PATH=.data/keys/public.pem
+JWT_PRIVATE_KEY_PATH=.data/keys/private.pem
+JWT_PUBLIC_KEY_PATH=.data/keys/public.pem
 
 # Bid Service Configuration
 BID_DB_URL=postgres://user:password@localhost:5432/bid_db
