test: load nextjs env vars for tests

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # Frontend Environment Variables
-# Copy this file to .env.local for local development
+# Copy this file to .env.local and .env.test for local development
 
 # Node Environment
 NODE_ENV=development
@@ -10,6 +10,8 @@ AUTH_SERVICE_URL=http://localhost:4001
 BID_SERVICE_URL=http://localhost:4002
 USER_STATS_SERVICE_URL=http://localhost:4003
 JWT_PUBLIC_KEY_PATH=../.data/keys/public.pem
+JWT_ISSUER=auth-service
+
 
 # Optional: Skip env validation during build (useful for Docker builds)
 # SKIP_ENV_VALIDATION=true
