--- a/deploy/charts/user-stats-service/templates/deployment-api.yaml
+++ b/deploy/charts/user-stats-service/templates/deployment-api.yaml
@@ -31,6 +31,14 @@ spec:
           env:
             - name: USER_STATS_DB_URL
               value: {{ .Values.config.userStatsDbUrl | quote }}
+            - name: JWT_PUBLIC_KEY_PATH
+              value: {{ .Values.config.jwtPublicKeyPath | quote }}
+            - name: JWT_ISSUER
+              value: {{ .Values.config.jwtIssuer | quote }}
+          volumeMounts:
+            - name: keys
+              mountPath: "/app/keys"
+              readOnly: true
           readinessProbe:
             httpGet:
               path: /health
@@ -49,4 +57,8 @@ spec:
             failureThreshold: 3
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: keys
+          secret:
+            secretName: auth-keys
 
