--- a/deploy/k8s/infra/rabbitmq.yaml
+++ b/deploy/k8s/infra/rabbitmq.yaml
@@ -1,4 +1,15 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: rabbitmq-config
+  labels:
+    app: rabbitmq
+data:
+  rabbitmq.conf: |
+    # Permit deprecated management_metrics_collection feature
+    deprecated_features.permit.management_metrics_collection = true
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq
@@ -46,16 +57,30 @@ spec:
               value: "user"
             - name: RABBITMQ_DEFAULT_PASS
               value: "password"
+          volumeMounts:
+            - name: rabbitmq-config
+              mountPath: /etc/rabbitmq/rabbitmq.conf
+              subPath: rabbitmq.conf
+          startupProbe:
+            tcpSocket:
+              port: 5672
+            failureThreshold: 30
+            periodSeconds: 10
           readinessProbe:
             exec:
               command: ["rabbitmq-diagnostics", "check_running"]
-            initialDelaySeconds: 20
+            initialDelaySeconds: 10
             periodSeconds: 10
-            timeoutSeconds: 10
+            timeoutSeconds: 15
+            failureThreshold: 3
           livenessProbe:
             exec:
               command: ["rabbitmq-diagnostics", "check_running"]
-            initialDelaySeconds: 30
-            periodSeconds: 20
-            timeoutSeconds: 10
-
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            timeoutSeconds: 30
+            failureThreshold: 3
+      volumes:
+        - name: rabbitmq-config
+          configMap:
+            name: rabbitmq-config
