feat: support unsecure cookies for local dev

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,6 +11,7 @@ BID_SERVICE_URL=http://localhost:4002
 USER_STATS_SERVICE_URL=http://localhost:4003
 JWT_PUBLIC_KEY_PATH=../.data/keys/public.pem
 JWT_ISSUER=auth-service
+SECURE_COOKIE=false
 
 
 # Optional: Skip env validation during build (useful for Docker builds)
