--- a/deploy/charts/frontend/templates/deployment.yaml
+++ b/deploy/charts/frontend/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
               value: /etc/secrets/jwt-keys/public.pem
             - name: JWT_ISSUER
               value: {{ .Values.config.jwtIssuer | quote }}
+            - name: SECURE_COOKIE
+              value: "{{ .Values.config.secureCookie }}"
           volumeMounts:
             - name: jwt-keys
               mountPath: /etc/secrets/jwt-keys
