--- a/deploy/charts/frontend/values.yaml
+++ b/deploy/charts/frontend/values.yaml
@@ -15,6 +15,8 @@ config:
   bidServiceUrl: "http://bid-service"
   userStatsServiceUrl: "http://user-stats-service"
   jwtIssuer: "gavel-auth-service"
+  # TODO: this value will be flipped in the prod value chart
+  secureCookie: false
 
 resources:
   requests:
