--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,13 +54,14 @@
     "@storybook/nextjs-vite": "^10.1.11",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react-dom": "^19",
     "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
+    "date-fns": "^4.1.0",
+    "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-storybook": "^10.1.11",
-    "eslint": "^9",
     "knip": "^5.79.0",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
